# aegis-forge

./: .gitignore  README.md  pyproject.toml
aegis/: archive.py  bundler.py  cli.py  config.py  extract_iocs.py  extract_strings.py  model.py  pe.py  pe_heuristics.py  scanner.py
aegis/qa/: harness.py
aegis/reporters/: console.py  csv_report.py
aegis_forge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: config.example.yaml
tests/: test_archive_rar_missing_7z.py  test_archive_zip_scan.py  test_bundle_structure_e2e.py  test_cli_includes_findings.py  test_cli_output_zip_name.py  test_encryption_policy_zip.py  test_extract_strings_iocs.py  test_hashes.py  test_integration_pe_notepad.py  test_model.py  test_pe_exports.py  test_pe_heuristics.py  test_pe_imports.py  test_pe_parse_arm64_pe32plus.py  test_pe_parse_minimal.py  test_pe_phase1_heuristics.py  test_pe_versioninfo_resources.py  test_reliability_guardrails.py  test_scanner_strings_iocs.py  test_zip_aes_encrypted_7z_backend.py
tests/fixtures/: benign.txt
